--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "@types/papaparse": "^5.3.15",
     "@types/pg": "^8.15.6",
     "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.1.1",
     "@vitest/browser": "^4.0.6",
     "@vitest/browser-playwright": "^4.0.6",
