--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "db:migrate": "dotenv -c -- drizzle-kit migrate",
     "db:studio": "drizzle-kit studio",
     "generate:encryption-key": "node scripts/generate-encryption-key.js",
+    "generate:rsa-keys": "node scripts/generate-rsa-keys.js",
     "storybook": "storybook dev -p 6006",
     "storybook:test": "vitest run --config .storybook/vitest.config.mts",
     "build-storybook": "storybook build"
@@ -105,6 +106,7 @@
     "get-db": "^0.11.0",
     "knip": "^5.70.2",
     "lefthook": "^2.0.4",
+    "mammoth": "^1.11.0",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.5.6",
     "postcss-load-config": "^6.0.1",
