--- a/tsconfig.json
+++ b/tsconfig.json
@@ -80,6 +80,7 @@
   // Files to include/exclude from the project
   "exclude": [
     "node_modules",
+    "scripts",
     "**/*.spec.ts",
     "**/*.e2e.ts"
   ],
