chore(config): exclude vitest config files from TypeScript compilation
- Add vitest.config.mts to tsconfig exclude list
- Add vitest.browser.setup.ts to tsconfig exclude list
- Prevent TypeScript from processing test configuration files during build

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -82,7 +82,9 @@
     "node_modules",
     "scripts",
     "**/*.spec.ts",
-    "**/*.e2e.ts"
+    "**/*.e2e.ts",
+    "vitest.config.mts",
+    "vitest.browser.setup.ts"
   ],
   "include": [
     "next-env.d.ts",
