chore(deps): upgrade Next.js to 16.1.0 and related packages
- Upgrade Next.js from 16.0.4 to 16.1.0
- Update @next/bundle-analyzer to 16.1.0
- Update @next/eslint-plugin-next to 16.1.0
- Update pnpm-lock.yaml with resolved dependencies for Next.js 16.1.0
- Ensure all dependent packages are compatible with the new Next.js version

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -84,7 +84,8 @@
     "**/*.spec.ts",
     "**/*.e2e.ts",
     "vitest.config.mts",
-    "vitest.browser.setup.ts"
+    "vitest.browser.setup.ts",
+    ".storybook/**/*"
   ],
   "include": [
     "next-env.d.ts",
