fix(seo): fix critical SEO issues
- Fix root layout.tsx Sentry placeholder metadata
- Fix .env.production NEXT_PUBLIC_APP_URL placeholder
- Add metadataBase to [locale]/layout.tsx
- Add i18n support to sitemap.ts with alternates
- Fix OG locale hardcoded to en_US, now dynamic
- Add hreflang alternates to all pages
- Fix OG default image path

--- a/.env.production
+++ b/.env.production
@@ -6,7 +6,7 @@
 # ============================================
 # Application Configuration
 # ============================================
-NEXT_PUBLIC_APP_URL=https://your-domain.com
+NEXT_PUBLIC_APP_URL=https://aifreepool.com
 
 # ============================================
 # Clerk Authentication (REQUIRED)
