feat: 接入Google AdSense广告
- 添加AdSense脚本和meta标签到layout
- 创建ads.txt验证文件
- 创建AdBanner可复用广告组件
- Publisher ID: ca-pub-8425376455595468

--- a/.gitignore
+++ b/.gitignore
@@ -68,3 +68,9 @@ build-archive.log
 .idea
 .env
 .env.production
+
+# Research reports
+*-research.md
+*-report.md
+*-verified-data.md
+platform-data-update.md
