feat: 批量添加14个缺失平台到数据库
- 新增 Cohere、Vercel AI Gateway、Google Cloud Vertex AI 等 14 个平台
- 来源：GitHub free-llm-api-resources 项目对比
- 包含完整的三语翻译（zh/en/fr）
- 所有平台均已验证免费额度信息

平台列表：
1. Cohere - 1000次请求/月
2. Vercel AI Gateway - $5/月
3. Google Cloud Vertex AI - $300（90天）
4. Baseten - 试用额度
5. Nebius - 试用额度
6. Novita AI - 试用额度
7. AI21 Labs - Jamba系列
8. Upstage - Solar系列
9. NLP Cloud - 多模型API
10. Modal - $30/月
11. Inference.net - 分布式推理
12. Hyperbolic - GPU推理
13. Scaleway - 免费Generative APIs
14. Alibaba Cloud Model Studio - 国际版通义千问

--- a/.env.production
+++ b/.env.production
@@ -88,3 +88,7 @@ ENABLE_CODE_OBFUSCATION=true
 # ============================================
 NEXT_TELEMETRY_DISABLED=1
 NODE_ENV=production
+
+# PostHog Analytics
+NEXT_PUBLIC_POSTHOG_KEY=phc_Abi2d4xjO4Xvq8yKRyICgEteLIokEfbWMtfblhsNabk
+NEXT_PUBLIC_POSTHOG_HOST=https://us.i.posthog.com
